// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bar should change allow theme overrides 1`] = `
<div
  className="coz-bar-wrapper coz-theme-primary"
  style={
    Object {
      "--cozBarThemePrimaryColor": "red",
    }
  }
>
  <div
    id="cozy-bar-modal-dom-place"
  />
  <div
    className="coz-bar-container"
  >
    <button
      className="coz-bar-btn coz-bar-burger"
      data-tutorial="apps-mobile"
      onClick={[Function]}
      type="button"
    >
      <Icon
        height={16}
        icon="test-file-stub"
        spin={false}
        width={16}
      />
      <span
        className="coz-bar-hidden"
      >
        drawer
      </span>
    </button>
    <Apps />
    <div
      className="u-flex-grow"
    />
    <Wrapper
      toggleSupport={[Function]}
    />
    <Connect(Drawer)
      drawerListener={[Function]}
      isClaudyLoading={false}
      onClaudy={false}
      onClose={[Function]}
      toggleSupport={[Function]}
      visible={false}
    />
  </div>
</div>
`;

exports[`Bar should change theme 1`] = `
<div
  className="coz-bar-wrapper coz-theme-primary"
  style={Object {}}
>
  <div
    id="cozy-bar-modal-dom-place"
  />
  <div
    className="coz-bar-container"
  >
    <button
      className="coz-bar-btn coz-bar-burger"
      data-tutorial="apps-mobile"
      onClick={[Function]}
      type="button"
    >
      <Icon
        height={16}
        icon="test-file-stub"
        spin={false}
        width={16}
      />
      <span
        className="coz-bar-hidden"
      >
        drawer
      </span>
    </button>
    <Apps />
    <div
      className="u-flex-grow"
    />
    <Wrapper
      toggleSupport={[Function]}
    />
    <Connect(Drawer)
      drawerListener={[Function]}
      isClaudyLoading={false}
      onClaudy={false}
      onClose={[Function]}
      toggleSupport={[Function]}
      visible={false}
    />
  </div>
</div>
`;

exports[`Bar should display the Searchbar 1`] = `
<div
  className="coz-bar-wrapper coz-theme-default"
  style={Object {}}
>
  <div
    id="cozy-bar-modal-dom-place"
  />
  <div
    className="coz-bar-container"
  >
    <button
      className="coz-bar-btn coz-bar-burger"
      data-tutorial="apps-mobile"
      onClick={[Function]}
      type="button"
    >
      <Icon
        height={16}
        icon="test-file-stub"
        spin={false}
        width={16}
      />
      <span
        className="coz-bar-hidden"
      >
        drawer
      </span>
    </button>
    <Apps
      isPublic={false}
    />
    <div
      className="u-flex-grow"
    >
      <Wrapper />
    </div>
    <Wrapper
      toggleSupport={[Function]}
    />
    <Connect(Drawer)
      drawerListener={[Function]}
      isClaudyLoading={false}
      onClaudy={false}
      onClose={[Function]}
      toggleSupport={[Function]}
      visible={false}
    />
  </div>
</div>
`;

exports[`Bar should have correct dispatch props provided by the store 1`] = `
Object {
  "fetchApps": [Function],
  "fetchContext": [Function],
  "fetchSettingsData": [Function],
}
`;

exports[`Bar should have correct state props provided by the store with the initial state 1`] = `
Object {
  "barCenter": undefined,
  "barLeft": undefined,
  "barRight": undefined,
  "claudyEnabled": false,
  "currentApp": "null null",
  "hasFetchedApps": false,
  "theme": "default",
  "themeOverrides": Object {},
}
`;

exports[`Bar should not display searchbar if we are not on  a public page 1`] = `
<div
  className="coz-bar-wrapper coz-theme-default"
  style={Object {}}
>
  <div
    id="cozy-bar-modal-dom-place"
  />
  <div
    className="coz-bar-container"
  >
    <Apps
      isPublic={true}
    />
    <div
      className="u-flex-grow"
    />
  </div>
</div>
`;

exports[`Bar should not display searchbar if we are not on Cozy Drive 1`] = `
<div
  className="coz-bar-wrapper coz-theme-default"
  style={Object {}}
>
  <div
    id="cozy-bar-modal-dom-place"
  />
  <div
    className="coz-bar-container"
  >
    <button
      className="coz-bar-btn coz-bar-burger"
      data-tutorial="apps-mobile"
      onClick={[Function]}
      type="button"
    >
      <Icon
        height={16}
        icon="test-file-stub"
        spin={false}
        width={16}
      />
      <span
        className="coz-bar-hidden"
      >
        drawer
      </span>
    </button>
    <Apps
      isPublic={false}
    />
    <div
      className="u-flex-grow"
    />
    <Wrapper
      toggleSupport={[Function]}
    />
    <Connect(Drawer)
      drawerListener={[Function]}
      isClaudyLoading={false}
      onClaudy={false}
      onClose={[Function]}
      toggleSupport={[Function]}
      visible={false}
    />
  </div>
</div>
`;

exports[`Bar should not display searchbar if we are on mobile 1`] = `
<div
  className="coz-bar-wrapper coz-theme-default"
  style={Object {}}
>
  <div
    id="cozy-bar-modal-dom-place"
  />
  <div
    className="coz-bar-container"
  >
    <button
      className="coz-bar-btn coz-bar-burger"
      data-tutorial="apps-mobile"
      onClick={[Function]}
      type="button"
    >
      <Icon
        height={16}
        icon="test-file-stub"
        spin={false}
        width={16}
      />
      <span
        className="coz-bar-hidden"
      >
        drawer
      </span>
    </button>
    <Apps
      isPublic={false}
    />
    <div
      className="u-flex-grow"
    />
    <Wrapper
      toggleSupport={[Function]}
    />
    <Connect(Drawer)
      drawerListener={[Function]}
      isClaudyLoading={false}
      onClaudy={false}
      onClose={[Function]}
      toggleSupport={[Function]}
      visible={false}
    />
  </div>
</div>
`;
